external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_unpack_assign_lhs_mdot_no_addr.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_unpack_assign_lhs_mdot_no_addr.move:4:14
  │
4 │         false::M { f } = 0;
  │              ^^
  │              │
  │              Unexpected '::'
  │              Expected ';'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_unpack_assign_lhs_mdot_no_addr.move:4:14
  │
4 │         false::M { f } = 0;
  │              ^^
  │              │
  │              Unexpected '::'
  │              Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

